--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -67,12 +67,18 @@ html {
   margin-right: auto;
 }
 
+#password {
+  font-weight: 600;
+  font-size: 22px;
+}
+
 .button {
   cursor: pointer;
   font-family: "Roboto Mono";
-  font-size: 16px;
+  font-size: 20px;
+  color: #ffffff;
   background-color: #C70039;
   border: none;
   border-radius: 10px;
-  padding: 1rem;
+  padding: 0.5rem;
 }/*# sourceMappingURL=style.css.map */
