--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,8 @@
 @import 'reset';
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap');
 
 $accent-color: #C70039;
+$white: #ffffff;
 
 
 html {
@@ -14,12 +15,22 @@ html {
     margin-right: auto;
 }
 
+#password {
+    font-weight: 600;
+    font-size: 22px;
+}
+
 .button {
     cursor: pointer;
     font-family: 'Roboto Mono';
-    font-size: 16px;
+    font-size: 20px;
+    color: $white;
     background-color: $accent-color;
     border: none;
     border-radius: 10px;
-    padding: 1rem;
+    padding: 0.5rem;
+}
+
+.copy-button {
+    
 }
