--- a/style.css
+++ b/style.css
@@ -61,15 +61,37 @@ html {
   font-family: "Roboto Mono";
 }
 
+h1 {
+  font-size: 28px;
+  margin: 3rem 0 1rem 0;
+}
+
+.copied {
+  background-color: #c3ff00;
+  transition: 0.5s ease-in-out;
+}
+
 .container {
   max-width: 40vw;
+  display: flex;
+  flex-direction: column;
   margin-left: auto;
   margin-right: auto;
 }
 
-#password {
+.password-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #eeeeee;
+  border-radius: 20px;
+}
+
+.password {
   font-weight: 600;
   font-size: 22px;
+  margin-left: 1rem;
 }
 
 .button {
@@ -77,8 +99,95 @@ html {
   font-family: "Roboto Mono";
   font-size: 20px;
   color: #ffffff;
-  background-color: #C70039;
+  background-color: #000000;
   border: none;
-  border-radius: 10px;
+  border-radius: 20px;
   padding: 0.5rem;
+  transition: 0.2s ease-in-out;
+}
+.button:hover {
+  background-color: #c3ff00;
+  color: #000000;
+  outline-offset: -2px;
+  outline: 2px solid #000000;
+}
+
+.password-button {
+  padding: 0.5rem;
+  margin: 1rem 0 1rem 0;
+}
+
+.copy-button {
+  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+  border-radius: 0 20px 20px 0;
+}
+
+.password-length-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.password-length-value {
+  font-weight: 600;
+  margin-right: 1em;
+}
+
+input[type=checkbox] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: #ffffff;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.5em;
+  height: 1.5em;
+  border: 2px solid #000000;
+  border-radius: 1em;
+  display: grid;
+  place-content: center;
+}
+input[type=checkbox]:before {
+  content: "";
+  width: 1.5em;
+  height: 1.5em;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1.5em 1.5em #000000;
+  -webkit-clip-path: circle(40%);
+          clip-path: circle(40%);
+}
+input[type=checkbox]:checked::before {
+  transform: scale(1);
+}
+input[type=checkbox]:focus {
+  outline: 3px solid #c6c6c6;
+  outline-offset: 0;
+}
+
+.checkbox-label {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1em;
+}
+
+.password-button {
+  width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 60vw;
+  }
+}
+@media (max-width: 900px) {
+  .container {
+    max-width: 80vw;
+  }
+}
+@media (max-width: 600px) {
+  .container {
+    max-width: 95vw;
+  }
 }/*# sourceMappingURL=style.css.map */
