--- a/style.scss
+++ b/style.scss
@@ -1,23 +1,47 @@
 @import 'reset';
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap');
 
-$accent-color: #C70039;
+$black: #000000;
+$secondary-color: #c3ff00;
 $white: #ffffff;
+$password-container-bg: #eeeeee;
 
 
 html {
     font-family: 'Roboto Mono';
 }
 
+h1 {
+    font-size: 28px;
+    margin: 3rem 0 1rem 0;
+}
+
+.copied {
+    background-color: $secondary-color;
+    transition: 0.5s ease-in-out;
+}
+
 .container {
     max-width: 40vw;
+    display: flex;
+    flex-direction: column;
     margin-left: auto;
     margin-right: auto;
 }
 
-#password {
+.password-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: $password-container-bg;
+    border-radius: 20px;
+}
+
+.password {
     font-weight: 600;
     font-size: 22px;
+    margin-left: 1rem;
 }
 
 .button {
@@ -25,12 +49,102 @@ html {
     font-family: 'Roboto Mono';
     font-size: 20px;
     color: $white;
-    background-color: $accent-color;
+    background-color: $black;
     border: none;
-    border-radius: 10px;
+    border-radius: 20px;
     padding: 0.5rem;
+    transition: .2s ease-in-out;
+    &:hover {
+        background-color: $secondary-color;
+        color: $black;
+        outline-offset: -2px;
+        outline: 2px solid $black;
+    }
+}
+
+.password-button {
+    padding: 0.5rem;
+    margin: 1rem 0 1rem 0;
 }
 
 .copy-button {
-    
+    padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+    border-radius: 0 20px 20px 0;
+}
+
+
+.password-length-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.password-length-value {
+    font-weight: 600;
+    margin-right: 1em;
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    background-color: #ffffff;
+    margin: 0;
+
+    font: inherit;
+    color: currentColor;
+    width: 1.5em;
+    height: 1.5em;
+    border: 2px solid $black;
+    border-radius: 1em;
+
+    display: grid;
+    place-content: center;
+
+    &:before {
+        content: "";
+        width: 1.5em;
+        height: 1.5em;
+        transform: scale(0);
+        transition: 120ms transform ease-in-out;
+        box-shadow:  inset 1.5em 1.5em $black;
+        //transform-origin: bottom left;
+        clip-path: circle(40%);
+        //clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    }
+
+    &:checked::before {
+            transform: scale(1);
+    }
+
+    &:focus {
+        outline: max(3px, 3px) solid #c6c6c6;
+        outline-offset: 0;
+    }
+}
+
+.checkbox-label {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1em;
+}
+
+.password-button {
+    width: 100%;
+}
+
+@media (max-width: 1200px) {
+    .container {
+        max-width: 60vw;
+    }
+}
+
+@media (max-width: 900px) {
+    .container {
+        max-width: 80vw;
+    }
+}
+
+@media (max-width: 600px) {
+    .container {
+        max-width: 95vw;
+    }
 }
