--- a/style.css
+++ b/style.css
@@ -133,6 +133,37 @@ h1 {
   margin-right: 1em;
 }
 
+input[type=range] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 100%;
+  height: 10px;
+  background: transparent;
+  outline: 2px solid #000000;
+  border-radius: 5px;
+}
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+          appearance: none;
+  width: 1.5em;
+  height: 1.5em;
+  background-color: #000000;
+  border-radius: 1em;
+  cursor: pointer;
+  outline: 2px solid #000000;
+  outline-offset: 1px;
+}
+input[type=range]::-moz-range-thumb {
+  width: 1.5em;
+  height: 1.5em;
+  background-color: #000000;
+  border-radius: 1em;
+  cursor: pointer;
+  outline: 2px solid #000000;
+  outline-offset: 1px;
+}
+
 input[type=checkbox] {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -160,10 +191,6 @@ input[type=checkbox]:before {
 }
 input[type=checkbox]:checked::before {
   transform: scale(1);
-}
-input[type=checkbox]:focus {
-  outline: 3px solid #c6c6c6;
-  outline-offset: 0;
 }
 
 .checkbox-label {
