--- a/style.scss
+++ b/style.scss
@@ -36,6 +36,7 @@ h1 {
     align-items: center;
     background-color: $password-container-bg;
     border-radius: 20px;
+    overflow-wrap: wrap;
 }
 
 .password {
