--- a/style.scss
+++ b/style.scss
@@ -36,13 +36,14 @@ h1 {
     align-items: center;
     background-color: $password-container-bg;
     border-radius: 20px;
-    overflow-wrap: wrap;
+
 }
 
 .password {
     font-weight: 600;
     font-size: 22px;
-    margin-left: 1rem;
+    margin-left: 1rem;    
+    overflow-wrap: anywhere;
 }
 
 .button {
