--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     background-color: $password-container-bg;
     border-radius: 20px;
 
@@ -42,7 +42,7 @@ h1 {
 .password {
     font-weight: 600;
     font-size: 22px;
-    margin-left: 1rem;    
+    padding: 0.5rem 1.5rem 0.5rem 1.5rem;    
     overflow-wrap: anywhere;
 }
 
@@ -65,6 +65,7 @@ h1 {
 }
 
 .password-button {
+    width: 100%;
     padding: 0.5rem;
     margin: 1rem 0 1rem 0;
 }
@@ -73,7 +74,6 @@ h1 {
     padding: 0.5rem 1.5rem 0.5rem 1.5rem;
     border-radius: 0 20px 20px 0;
 }
-
 
 .password-length-wrapper {
     display: flex;
@@ -150,10 +150,6 @@ input[type="checkbox"] {
     display: flex;
     justify-content: space-between;
     margin-top: 1em;
-}
-
-.password-button {
-    width: 100%;
 }
 
 @media (max-width: 1200px) {
