--- a/style.css
+++ b/style.css
@@ -66,11 +66,6 @@ h1 {
   margin: 3rem 0 1rem 0;
 }
 
-.copied {
-  background-color: #c3ff00;
-  transition: 0.5s ease-in-out;
-}
-
 .container {
   max-width: 40vw;
   display: flex;
@@ -86,13 +81,17 @@ h1 {
   align-items: stretch;
   background-color: #eeeeee;
   border-radius: 20px;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
 }
 
 .password {
   font-weight: 600;
   font-size: 22px;
-  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+  margin: 0.5rem 1.5rem 0.5rem 1.5rem;
   overflow-wrap: anywhere;
+  border-radius: 20px;
 }
 
 .button {
@@ -199,6 +198,11 @@ input[type=checkbox]:checked::before {
   display: flex;
   justify-content: space-between;
   margin-top: 1em;
+}
+
+.copied {
+  background-color: #c3ff00;
+  transition: 0.5s ease-in-out;
 }
 
 @media (max-width: 1200px) {
